# CUDA_DRR

./: README.md
SiddonClassLib/: readme.txt
SiddonClassLib/src/: CMakeLists.txt
SiddonClassLib/src/SiddonLib/: siddon_class.cu
SiddonPythonModule/: SiddonGpuPy.cpp  SiddonGpuPy.pyx  readme.txt  setup.py
